--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+    <h1>Leaderboard</h1>
     <main>
     <!-- Books List -->
     <Section class="sectionList">
         
-            <h1>
+            <h2>
                 Recent Scores
                 <button class="refresh">Refresh</button>
-             </h1>
+             </h2>
              
          <div class="displayWrap">
              <div id="display_card" style="font-weight: bold;">
