--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <!-- Books List -->
     <section class="sectionList">
         
-            <h2>
+            <h2 class="recent">
                 Recent Scores
                 <button class="refresh">Refresh</button>
              </h2>
@@ -35,8 +35,8 @@
          </h2>
             <div>
              <form class="form" id ="form">
-                <input type="text" placeholder="your name" id="title" required>    
-                <input type="text" placeholder="your score" id="author" required>
+                <input type="text" placeholder="Name..." id="title" required>    
+                <input type="text" placeholder="Score..." id="author" required>
                 <button id="submit_button"> Submit </button>
             </form>
             </div>
